[gd_scene load_steps=4 format=3 uid="uid://pg36k17msbsb"]

[ext_resource type="Script" uid="uid://b8tjt3djlac7y" path="res://src/level/main_level.gd" id="1_k7mun"]
[ext_resource type="PackedScene" uid="uid://dn4gfhwdccfj3" path="res://src/player/player_basic.tscn" id="2_bjc6m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bjc6m"]
size = Vector2(20, 200)

[node name="MainLevel" type="Node2D"]
script = ExtResource("1_k7mun")

[node name="RightExtent" type="Area2D" parent="."]
top_level = true
position = Vector2(2304, -20)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightExtent"]
shape = SubResource("RectangleShape2D_bjc6m")

[node name="PlayerBasic" parent="." instance=ExtResource("2_bjc6m")]
top_level = true

[connection signal="body_entered" from="RightExtent" to="." method="_on_right_extent_body_entered"]
